# conway

./: CMakeLists.txt  README.md  controls.hpp  logical.hpp  main.cpp
